<resources>
    <string name="app_name">OnTheStreetApp</string>
    <string name="add_place">Add Place</string>
    <string name="search_place">Search for a place...</string>
    <string name="place_name">Name:</string>
    <string name="place_desc">Description:</string>
    <string name="place_directions">Address:</string>
    <string name="hint_place_name">Name...</string>
    <string name="hint_place_desc">Description...</string>
    <string name="hint_place_directions">Address...</string>
    <string name="add_button">Add it</string>
    <string name="back_button">Go Back</string>
    <string name="title_activity_show_place">ShowPlaceActivity</string>
    <string name="related_contacts">Show</string>
    <string name="remove_place">Remove Place</string>
    <string name="edit_place">Edit place</string>
    <string name="title_activity_edit_place">EditPlaceActivity</string>
    <string name="info_posicion">NOTE: the position will be determined by the address inserted or your current position.</string>
    <string name="or">Or</string>
    <string name="lat">Latitude:</string>
    <string name="lng">Longitude:</string>
    <string name="save_edit">Save</string>
    <string name="edit_main">Edit</string>
    <string name="delete_main">Delete</string>
    <string name="add_image">Add image</string>
    <string name="total_contacts">Total: </string>
    <string name="empty_list">Contact list is empty. Come on! Add a contact to this place.</string>
    <string name="empty_places">Places list is empty. Come on! Add a place to this contact.</string>
    <string name="msg_error_no_connection">No internet connection available</string>
    <string name="msg_error_server">Error retriving address, check internet connection</string>
    <string name="near_places">Only nearby places</string>
    <string name="settings">Settings</string>
    <string name="nearest_place">Nearest place:</string>
    <string name="settings_overall">Overall settings</string>
    <string name="settings_location">Location settings</string>
    <string name="settings_radius">Radius of the area checked (m)</string>
    <string name="settings_current_pos">Location when adding new</string>
    <string name="settings_summary_current_pos">Use directly your current position when adding a place</string>
    <string name="settings_on_current_pos">Use current position</string>
    <string name="settings_off_current_pos">Insert position</string>
    <string name="settings_location_service">Nearest Place Service</string>
    <string name="settings_on_location_service">Running</string>
    <string name="settings_off_location_service">Stopped</string>
    <string name="settings_widget">Widget</string>
    <string name="widget_color">Color del Widget</string>
    <string name="settings_profile">Profile Settings</string>
    <string name="username">Username</string>
    <string name="internet_error_title">Internet connection error</string>
    <string name="internet_error_msg">You do not have Internet Connection. Enable it or Places will be added as default. You can edit it then.</string>
    <string name="loading_title">Loading</string>
    <string name="loading_msg">Loading. Checking direction... Please wait...</string>
    <string name="add_comment">Do you want to add a comment to this contact? Add it below.</string>
    <string name="positive_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="deleting_contact_title">Deleting contact</string>
    <string name="deleting_contact_msg">Are you sure you want to delete permanently </string>
    <string name="error_latlng_title">Error on latitude or longitude</string>
    <string name="error_latlng_msg">The latitude or longitude must be a double.</string>
    <string name="checking_location">Checking your current location</string>
    <string name="deleting_place_title">Deleting place</string>
    <string name="deleting_place_msg">Are you sure you want to delete permanently </string>
    <string name="positive_button_yes">Yes</string>
    <string name="negative_button_no">No</string>
    <string name="adding_photo_title">Adding a photo to </string>
    <string name="adding_photo_repeat_msg">You already have an image for this place. Are you sure you want to delete the previous one?</string>
    <string name="distance">Distance aprox:</string>
    <string name="meters">m</string>
    <string name="loading">Cargando...</string>
</resources>
