<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_place"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.deusto.onthestreetapp.EditPlaceActivity"
    android:background="@android:color/holo_blue_light">

    <ImageView
        android:src="@drawable/place_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:text="@string/save_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_edit_save"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/edit_desc"
        android:onClick="editPlace"
        android:background="@android:color/white" />

    <TextView
        android:text="@string/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toStartOf="@+id/textView2"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/edit_name"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_lat"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/edit_address"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_lng"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/edit_address"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/place_directions"
        android:ems="10"
        android:id="@+id/edit_address"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/or"
        android:layout_width="100dp"
        android:id="@+id/textView2"
        android:layout_height="15dp"
        android:textAlignment="center"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edit_desc"
        android:text="@string/place_desc"
        android:layout_width="300dp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/edit_lat"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/place_name"
        android:ems="10"
        android:id="@+id/edit_name"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white" />

</RelativeLayout>
