<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.deusto.onthestreetapp.AddPlaceActivity"
    android:background="@android:color/holo_blue_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="95dp"
                    android:id="@+id/input_nombre"
                    android:hint="@string/hint_place_name" />

                <TextView
                    android:text="@string/add_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="21dp"
                    tools:text="@string/add_place"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textSize="30sp" />

                <Button
                    android:text="@string/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="26dp"
                    android:id="@+id/btn_anadir"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@+id/input_nombre"
                    android:visibility="visible"
                    android:onClick="addPlace"/>

                <ImageView
                    android:src="@android:drawable/ic_menu_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_toEndOf="@+id/textView3"
                    android:layout_marginStart="30dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/input_direccion"
                    android:hint="@string/hint_place_directions"
                    android:layout_below="@+id/input_nombre"
                    android:layout_alignStart="@+id/input_nombre"
                    android:layout_marginTop="33dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_nombre"
                    tools:text="@string/place_name"
                    android:text="@string/place_name"
                    android:layout_alignBaseline="@+id/input_nombre"
                    android:layout_alignBottom="@+id/input_nombre"
                    android:layout_alignStart="@+id/lbl_direccion" />

                <TextView
                    android:text="@string/info_posicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="11sp"
                    android:layout_below="@+id/input_direccion"
                    android:layout_alignStart="@+id/textView3" />

                <EditText
                    android:id="@+id/input_desc"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_place_desc"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"
                    android:singleLine="false"
                    android:layout_height="75dp"
                    android:layout_alignTop="@+id/lbl_desc"
                    android:layout_toEndOf="@+id/lbl_desc" />

                <TextView
                    android:text="@string/place_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_desc"
                    tools:text="@string/place_desc"
                    android:layout_marginTop="67dp"
                    android:layout_below="@+id/textView"
                    android:layout_toStartOf="@+id/input_direccion" />

                <TextView
                    android:text="@string/place_directions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_direccion"
                    tools:text="@string/place_directions"
                    android:layout_alignBaseline="@+id/input_direccion"
                    android:layout_alignBottom="@+id/input_direccion"
                    android:layout_alignStart="@+id/lbl_desc" />

                <ImageButton
                    android:src="@drawable/ic_my_location_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_localizar"
                    android:onClick="localize"
                    android:layout_above="@+id/lbl_direccion"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</RelativeLayout>
