<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:layout_width="200dp"
        android:background="@drawable/widget_shape_green"
        android:id="@+id/relative_widget"
        android:addStatesFromChildren="true"
        android:layout_height="150dp">

        <TextView
            android:text="@string/nearest_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp" />

        <TextView
            android:text="@string/place_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white"
            android:layout_below="@+id/txt_nearest_name"
            android:layout_alignStart="@+id/textView7"
            android:textSize="20sp" />

        <TextView
            android:text="@string/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_nearest_name"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/textView7"
            android:layout_alignStart="@+id/textView7" />

        <TextView
            android:text="@string/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_nearest_address"
            android:textColor="@android:color/white"
            android:layout_below="@+id/textView9"
            android:layout_alignStart="@+id/textView9" />

        <ImageView
            android:src="@drawable/ic_map_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:id="@+id/imageView4"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>