<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.deusto.onthestreetapp.AddPlaceActivity"
    android:background="@android:color/holo_blue_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="569dp">

                <TextView
                    android:text="TextView"
                    android:id="@+id/show_description"
                    android:singleLine="false"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_alignBaseline="@+id/input_desc_show"
                    android:layout_alignBottom="@+id/input_desc_show"
                    android:layout_alignEnd="@+id/mapView" />

                <TextView
                    android:text="@string/place_directions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_address_show"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:layout_marginTop="23dp"
                    android:layout_below="@+id/show_name"
                    android:layout_alignStart="@+id/input_name_show" />

                <TextView
                    android:text="@string/place_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_desc_show"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:layout_below="@+id/show_address"
                    android:layout_alignStart="@+id/mapView"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/number_contacts"
                    android:textAlignment="center"
                    android:layout_below="@+id/textView6"
                    android:layout_toEndOf="@+id/imageView3"
                    android:layout_marginStart="13dp" />

                <ImageView
                    android:src="@drawable/example"
                    android:id="@+id/image_place"
                    android:onClick="showImage"
                    android:clickable="true"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:text="@string/place_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_name_show"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/input_desc_show" />

                <TextView
                    android:text="@string/total_contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textStyle="normal|bold"
                    android:layout_below="@+id/image_place"
                    android:layout_alignStart="@+id/number_contacts" />

                <ImageButton
                    android:src="@drawable/ic_add_a_photo_black_24dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/btn_add_image"
                    android:onClick="addPhoto"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/image_place"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="13dp" />

                <ImageView
                    android:src="@drawable/ic_people_black_24dp"
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@+id/image_place"
                    android:layout_alignStart="@+id/image_place" />

                <com.google.android.gms.maps.MapView
                    android:background="#444"
                    android:padding="2dp"
                    android:id="@+id/mapView"
                    android:layout_width="300dp"
                    android:layout_marginTop="13dp"
                    android:layout_height="150dp"
                    android:layout_below="@+id/show_description"
                    android:layout_centerHorizontal="true" />

                <ImageButton
                    android:src="@drawable/ic_list_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="17dp"
                    android:layout_marginTop="159dp"
                    android:id="@+id/btn_related_contacts"
                    android:onClick="showContacts" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_name"
                    android:paddingLeft="10dp"
                    android:layout_alignBottom="@+id/btn_add_image"
                    android:layout_alignStart="@+id/show_address" />

                <TextView
                    android:text="TextView"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_address"
                    android:paddingLeft="10dp"
                    android:singleLine="false"

                    android:layout_marginLeft="10dp"
                    android:layout_width="150dp"
                    android:layout_below="@+id/number_contacts"
                    android:layout_toStartOf="@+id/btn_add_image" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</RelativeLayout>
